--- a/instaScam/Base.lproj/Main.storyboard
+++ b/instaScam/Base.lproj/Main.storyboard
@@ -218,27 +218,27 @@
                                 <exclude reference="tYc-e5-hbc"/>
                             </mask>
                             <mask key="constraints">
+                                <exclude reference="1xC-CJ-IE3"/>
+                                <exclude reference="3kj-Sc-EhE"/>
+                                <exclude reference="olo-mh-WHO"/>
                                 <exclude reference="S11-72-4Hu"/>
                                 <exclude reference="UjZ-AJ-vPa"/>
                                 <exclude reference="oDJ-Be-caL"/>
                                 <exclude reference="DhG-5Q-eQt"/>
                                 <exclude reference="PQq-Y8-Ecz"/>
                                 <exclude reference="fo0-Jj-s0g"/>
-                                <exclude reference="Dko-aJ-pcx"/>
-                                <exclude reference="XFt-Sc-1QH"/>
-                                <exclude reference="zov-Hc-qu5"/>
                                 <exclude reference="bJH-lU-blT"/>
                                 <exclude reference="rQo-KZ-Kka"/>
                                 <exclude reference="tey-hd-xOV"/>
-                                <exclude reference="1xC-CJ-IE3"/>
-                                <exclude reference="3kj-Sc-EhE"/>
-                                <exclude reference="olo-mh-WHO"/>
-                                <exclude reference="9On-ZL-GAD"/>
-                                <exclude reference="hFp-QS-dMt"/>
                                 <exclude reference="CzQ-Vz-xrq"/>
+                                <exclude reference="Dko-aJ-pcx"/>
+                                <exclude reference="XFt-Sc-1QH"/>
+                                <exclude reference="zov-Hc-qu5"/>
                                 <exclude reference="7HH-iH-Yno"/>
                                 <exclude reference="U0z-sw-FPa"/>
                                 <exclude reference="pYv-ja-bLp"/>
+                                <exclude reference="9On-ZL-GAD"/>
+                                <exclude reference="hFp-QS-dMt"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -253,27 +253,27 @@
                                 <include reference="tYc-e5-hbc"/>
                             </mask>
                             <mask key="constraints">
+                                <include reference="1xC-CJ-IE3"/>
+                                <include reference="3kj-Sc-EhE"/>
+                                <include reference="olo-mh-WHO"/>
                                 <include reference="S11-72-4Hu"/>
                                 <include reference="UjZ-AJ-vPa"/>
                                 <include reference="oDJ-Be-caL"/>
                                 <include reference="DhG-5Q-eQt"/>
                                 <include reference="PQq-Y8-Ecz"/>
                                 <include reference="fo0-Jj-s0g"/>
-                                <include reference="Dko-aJ-pcx"/>
-                                <include reference="XFt-Sc-1QH"/>
-                                <include reference="zov-Hc-qu5"/>
                                 <include reference="bJH-lU-blT"/>
                                 <include reference="rQo-KZ-Kka"/>
                                 <include reference="tey-hd-xOV"/>
-                                <include reference="1xC-CJ-IE3"/>
-                                <include reference="3kj-Sc-EhE"/>
-                                <include reference="olo-mh-WHO"/>
-                                <include reference="9On-ZL-GAD"/>
-                                <include reference="hFp-QS-dMt"/>
                                 <include reference="CzQ-Vz-xrq"/>
+                                <include reference="Dko-aJ-pcx"/>
+                                <include reference="XFt-Sc-1QH"/>
+                                <include reference="zov-Hc-qu5"/>
                                 <include reference="7HH-iH-Yno"/>
                                 <include reference="U0z-sw-FPa"/>
                                 <include reference="pYv-ja-bLp"/>
+                                <include reference="9On-ZL-GAD"/>
+                                <include reference="hFp-QS-dMt"/>
                             </mask>
                         </variation>
                     </view>
@@ -457,10 +457,10 @@
                                 <exclude reference="AVm-Fo-wfn"/>
                             </mask>
                             <mask key="constraints">
+                                <exclude reference="65H-Rf-C0m"/>
                                 <exclude reference="5Vg-yh-WLy"/>
                                 <exclude reference="By1-kr-45O"/>
                                 <exclude reference="TON-fr-2sS"/>
-                                <exclude reference="65H-Rf-C0m"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -469,10 +469,10 @@
                                 <include reference="AVm-Fo-wfn"/>
                             </mask>
                             <mask key="constraints">
+                                <include reference="65H-Rf-C0m"/>
                                 <include reference="5Vg-yh-WLy"/>
                                 <include reference="By1-kr-45O"/>
                                 <include reference="TON-fr-2sS"/>
-                                <include reference="65H-Rf-C0m"/>
                             </mask>
                         </variation>
                     </view>
@@ -515,6 +515,7 @@
                         <viewControllerLayoutGuide type="bottom" id="Eai-2R-BTE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="apA-2W-gH9">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="2Lw-tY-9hr">
@@ -740,25 +741,25 @@
                                 <exclude reference="zng-cr-3Ia"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="Acd-kv-PaD"/>
-                                <exclude reference="alm-H6-N6o"/>
+                                <exclude reference="S2c-Zy-Jpi"/>
+                                <exclude reference="x27-vR-Eer"/>
                                 <exclude reference="RS5-yg-OCw"/>
                                 <exclude reference="gEH-z5-oXl"/>
-                                <exclude reference="8xK-Zn-uT7"/>
-                                <exclude reference="lTa-W4-Q42"/>
-                                <exclude reference="rvy-ys-KfG"/>
+                                <exclude reference="38c-fz-VYw"/>
+                                <exclude reference="vK0-q1-tPG"/>
+                                <exclude reference="QtH-Cj-5YQ"/>
+                                <exclude reference="TLw-dU-iWG"/>
                                 <exclude reference="IzU-c3-MS1"/>
                                 <exclude reference="OMA-Hq-5FP"/>
                                 <exclude reference="Z9D-gi-tGt"/>
-                                <exclude reference="38c-fz-VYw"/>
-                                <exclude reference="vK0-q1-tPG"/>
-                                <exclude reference="S2c-Zy-Jpi"/>
-                                <exclude reference="x27-vR-Eer"/>
+                                <exclude reference="Acd-kv-PaD"/>
+                                <exclude reference="alm-H6-N6o"/>
+                                <exclude reference="8xK-Zn-uT7"/>
+                                <exclude reference="lTa-W4-Q42"/>
+                                <exclude reference="rvy-ys-KfG"/>
                                 <exclude reference="HyS-dl-tDi"/>
                                 <exclude reference="dzJ-Ya-1CL"/>
                                 <exclude reference="qls-b9-3WR"/>
-                                <exclude reference="QtH-Cj-5YQ"/>
-                                <exclude reference="TLw-dU-iWG"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -773,25 +774,25 @@
                                 <include reference="zng-cr-3Ia"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="Acd-kv-PaD"/>
-                                <include reference="alm-H6-N6o"/>
+                                <include reference="S2c-Zy-Jpi"/>
+                                <include reference="x27-vR-Eer"/>
                                 <include reference="RS5-yg-OCw"/>
                                 <include reference="gEH-z5-oXl"/>
-                                <include reference="8xK-Zn-uT7"/>
-                                <include reference="lTa-W4-Q42"/>
-                                <include reference="rvy-ys-KfG"/>
+                                <include reference="38c-fz-VYw"/>
+                                <include reference="vK0-q1-tPG"/>
+                                <include reference="QtH-Cj-5YQ"/>
+                                <include reference="TLw-dU-iWG"/>
                                 <include reference="IzU-c3-MS1"/>
                                 <include reference="OMA-Hq-5FP"/>
                                 <include reference="Z9D-gi-tGt"/>
-                                <include reference="38c-fz-VYw"/>
-                                <include reference="vK0-q1-tPG"/>
-                                <include reference="S2c-Zy-Jpi"/>
-                                <include reference="x27-vR-Eer"/>
+                                <include reference="Acd-kv-PaD"/>
+                                <include reference="alm-H6-N6o"/>
+                                <include reference="8xK-Zn-uT7"/>
+                                <include reference="lTa-W4-Q42"/>
+                                <include reference="rvy-ys-KfG"/>
                                 <include reference="HyS-dl-tDi"/>
                                 <include reference="dzJ-Ya-1CL"/>
                                 <include reference="qls-b9-3WR"/>
-                                <include reference="QtH-Cj-5YQ"/>
-                                <include reference="TLw-dU-iWG"/>
                             </mask>
                         </variation>
                     </view>
@@ -818,6 +819,7 @@
                         <viewControllerLayoutGuide type="bottom" id="YmR-tI-RIf"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="ItF-gw-uta">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EaE-Y3-Ufp">
@@ -973,27 +975,27 @@
                                 <exclude reference="Jhw-uz-Ukm"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="6c4-le-phh"/>
-                                <exclude reference="9a4-Uv-2in"/>
-                                <exclude reference="WWO-xG-7ch"/>
-                                <exclude reference="WDf-YI-Ywh"/>
-                                <exclude reference="Yys-aU-GJ6"/>
-                                <exclude reference="ZfC-8m-aVR"/>
-                                <exclude reference="8o7-g3-HFv"/>
-                                <exclude reference="EiT-tS-7g0"/>
-                                <exclude reference="Q1E-Hu-sPK"/>
-                                <exclude reference="0fW-eh-hU1"/>
-                                <exclude reference="TJa-MC-tn8"/>
-                                <exclude reference="rO9-c4-Xqq"/>
-                                <exclude reference="G55-Y6-CHq"/>
-                                <exclude reference="aL6-2M-Uzu"/>
-                                <exclude reference="fnS-uH-EAg"/>
                                 <exclude reference="30F-ei-Awt"/>
                                 <exclude reference="YFm-2h-4nC"/>
                                 <exclude reference="swk-eY-J94"/>
                                 <exclude reference="Lzn-pg-Ame"/>
                                 <exclude reference="OsZ-zy-K9L"/>
                                 <exclude reference="ZiF-iA-qbX"/>
+                                <exclude reference="6c4-le-phh"/>
+                                <exclude reference="9a4-Uv-2in"/>
+                                <exclude reference="WWO-xG-7ch"/>
+                                <exclude reference="0fW-eh-hU1"/>
+                                <exclude reference="TJa-MC-tn8"/>
+                                <exclude reference="rO9-c4-Xqq"/>
+                                <exclude reference="WDf-YI-Ywh"/>
+                                <exclude reference="Yys-aU-GJ6"/>
+                                <exclude reference="ZfC-8m-aVR"/>
+                                <exclude reference="G55-Y6-CHq"/>
+                                <exclude reference="aL6-2M-Uzu"/>
+                                <exclude reference="fnS-uH-EAg"/>
+                                <exclude reference="8o7-g3-HFv"/>
+                                <exclude reference="EiT-tS-7g0"/>
+                                <exclude reference="Q1E-Hu-sPK"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -1007,27 +1009,27 @@
                                 <include reference="Jhw-uz-Ukm"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="6c4-le-phh"/>
-                                <include reference="9a4-Uv-2in"/>
-                                <include reference="WWO-xG-7ch"/>
-                                <include reference="WDf-YI-Ywh"/>
-                                <include reference="Yys-aU-GJ6"/>
-                                <include reference="ZfC-8m-aVR"/>
-                                <include reference="8o7-g3-HFv"/>
-                                <include reference="EiT-tS-7g0"/>
-                                <include reference="Q1E-Hu-sPK"/>
-                                <include reference="0fW-eh-hU1"/>
-                                <include reference="TJa-MC-tn8"/>
-                                <include reference="rO9-c4-Xqq"/>
-                                <include reference="G55-Y6-CHq"/>
-                                <include reference="aL6-2M-Uzu"/>
-                                <include reference="fnS-uH-EAg"/>
                                 <include reference="30F-ei-Awt"/>
                                 <include reference="YFm-2h-4nC"/>
                                 <include reference="swk-eY-J94"/>
                                 <include reference="Lzn-pg-Ame"/>
                                 <include reference="OsZ-zy-K9L"/>
                                 <include reference="ZiF-iA-qbX"/>
+                                <include reference="6c4-le-phh"/>
+                                <include reference="9a4-Uv-2in"/>
+                                <include reference="WWO-xG-7ch"/>
+                                <include reference="0fW-eh-hU1"/>
+                                <include reference="TJa-MC-tn8"/>
+                                <include reference="rO9-c4-Xqq"/>
+                                <include reference="WDf-YI-Ywh"/>
+                                <include reference="Yys-aU-GJ6"/>
+                                <include reference="ZfC-8m-aVR"/>
+                                <include reference="G55-Y6-CHq"/>
+                                <include reference="aL6-2M-Uzu"/>
+                                <include reference="fnS-uH-EAg"/>
+                                <include reference="8o7-g3-HFv"/>
+                                <include reference="EiT-tS-7g0"/>
+                                <include reference="Q1E-Hu-sPK"/>
                             </mask>
                         </variation>
                     </view>
@@ -1053,6 +1055,7 @@
                         <viewControllerLayoutGuide type="bottom" id="fOD-vI-Wy9"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="loN-ow-1po">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
