--- a/instaScam/Base.lproj/Main.storyboard
+++ b/instaScam/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14D105g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
@@ -1128,7 +1128,7 @@
                                     </mask>
                                 </variation>
                                 <connections>
-                                    <action selector="takePictureButtonPressed:" destination="ghQ-4v-auD" eventType="touchUpInside" id="W7s-7A-6tx"/>
+                                    <action selector="onTakePictureButtonTapped:" destination="ghQ-4v-auD" eventType="touchUpInside" id="bU3-bg-Lja"/>
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fIm-h4-wWH">
@@ -1169,7 +1169,7 @@
                                     </mask>
                                 </variation>
                                 <connections>
-                                    <action selector="choosePictureButtonPressed:" destination="ghQ-4v-auD" eventType="touchUpInside" id="QoP-nw-KFj"/>
+                                    <action selector="onChoosePictureButtonTapped:" destination="ghQ-4v-auD" eventType="touchUpInside" id="NYh-ro-Dl9"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -1230,7 +1230,7 @@
                     <tabBarItem key="tabBarItem" title="Camera" id="UyX-eR-wX5"/>
                     <connections>
                         <outlet property="commentTextField" destination="L3T-K8-WJd" id="mxN-09-0Me"/>
-                        <outlet property="postImageView" destination="fIm-h4-wWH" id="BcD-KM-rW1"/>
+                        <outlet property="postingImageView" destination="fIm-h4-wWH" id="z88-tW-Qyx"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wjn-iz-vWq" userLabel="First Responder" sceneMemberID="firstResponder"/>
