--- a/instaScam/Base.lproj/Main.storyboard
+++ b/instaScam/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14D105g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
@@ -315,37 +315,19 @@
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VKn-qG-Lsk">
                                                     <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
-                                                    <variation key="widthClass=compact" misplaced="YES">
-                                                        <rect key="frame" x="0.0" y="0.0" width="320" height="400"/>
+                                                    <variation key="widthClass=compact" fixedFrame="YES">
+                                                        <rect key="frame" x="28" y="27" width="345" height="348"/>
                                                     </variation>
                                                 </imageView>
                                             </subviews>
-                                            <constraints>
-                                                <constraint firstAttribute="trailingMargin" secondItem="VKn-qG-Lsk" secondAttribute="trailing" constant="-8" id="Ph7-SB-54z"/>
-                                                <constraint firstItem="VKn-qG-Lsk" firstAttribute="top" secondItem="Xzm-nF-5Kl" secondAttribute="topMargin" constant="-8" id="coS-t5-KG9"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="VKn-qG-Lsk" secondAttribute="bottom" constant="-8" id="mFV-e9-KkG"/>
-                                                <constraint firstItem="VKn-qG-Lsk" firstAttribute="leading" secondItem="Xzm-nF-5Kl" secondAttribute="leadingMargin" constant="-8" id="uny-0m-LhZ"/>
-                                            </constraints>
                                             <variation key="default">
                                                 <mask key="subviews">
                                                     <exclude reference="VKn-qG-Lsk"/>
-                                                </mask>
-                                                <mask key="constraints">
-                                                    <exclude reference="Ph7-SB-54z"/>
-                                                    <exclude reference="coS-t5-KG9"/>
-                                                    <exclude reference="mFV-e9-KkG"/>
-                                                    <exclude reference="uny-0m-LhZ"/>
                                                 </mask>
                                             </variation>
                                             <variation key="widthClass=compact">
                                                 <mask key="subviews">
                                                     <include reference="VKn-qG-Lsk"/>
-                                                </mask>
-                                                <mask key="constraints">
-                                                    <include reference="Ph7-SB-54z"/>
-                                                    <include reference="coS-t5-KG9"/>
-                                                    <include reference="mFV-e9-KkG"/>
-                                                    <include reference="uny-0m-LhZ"/>
                                                 </mask>
                                             </variation>
                                         </tableViewCellContentView>
@@ -398,7 +380,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="S7W-aU-kd6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2008.5" y="429"/>
+            <point key="canvasLocation" x="2008.5" y="425"/>
         </scene>
         <!--Home Detail View Controller-->
         <scene sceneID="ySt-ey-vC6">
